Add PWA support and deployment configuration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>LifeOS - Your Executive Assistant with a Soul</title>
     <meta name="description" content="LifeOS helps you align your daily actions with your future self. A calm, supportive life management app that understands your values." />
     <meta name="author" content="LifeOS" />
     <meta name="theme-color" content="#8F5774" />
     <link rel="manifest" href="/manifest.json" />
+    
+    <!-- iOS PWA Support -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="LifeOS" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
 
     <meta property="og:title" content="LifeOS - Your Executive Assistant with a Soul" />
     <meta property="og:description" content="Align your daily actions with your future self. Calm, supportive, intelligent life management." />
